--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,10 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "import xgboost\n",
+    "\n",
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.metrics import mutual_info_score\n",
+    "from sklearn.metrics import f1_score\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -4033,29 +4035,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
     "# final features selected\n",
-    "numeric =  [ \n",
+    "numeric =  [ 'age',\n",
+    " 'number_of_dependents',\n",
+    " 'zip_code',\n",
+    " 'latitude',\n",
+    " 'longitude',\n",
     "    'number_of_dependents',\n",
-    "            'number_of_referrals',\n",
-    "            'tenure_in_months',\n",
-    "            'monthly_charge',\n",
-    "            'total_charges',\n",
-    "            'total_refunds',\n",
-    "            'total_long_distance_charges',\n",
-    "            'total_revenue'\n",
-    "            ]\n",
+    "    'number_of_referrals',\n",
+    "    'tenure_in_months',\n",
+    "    'monthly_charge',\n",
+    "    'total_charges',\n",
+    "    'total_refunds',\n",
+    "    'total_long_distance_charges',\n",
+    "    'total_revenue'\n",
+    "]\n",
     "\n",
     "categorical = [\n",
+    "    'gender',\n",
+    "    'married',\n",
+    "    'city',\n",
     "    'churn_reason',\n",
-    "     ' churn_category',\n",
-    "     'city',\n",
-    "      'contract',\n",
-    "      'offer', \n",
-    "      'internet_service'\n",
+    "    'churn_category',\n",
+    "    'city',\n",
+    "    'contract',\n",
+    "    'offer', \n",
+    "    'internet_service',\n",
+    "    'device_protection_plan',\n",
+    "    'premium_tech_support',\n",
+    "    'streaming_tv',\n",
+    "    'streaming_movies',\n",
+    "    'streaming_music',\n",
+    "    'unlimited_data',\n",
+    "    'paperless_billing',\n",
+    "    'payment_method',\n",
     "]"
    ]
   },
@@ -4085,11 +4102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(data, y,sparse, model, C=1.0):\n",
+    "def train(data, y,sparse, model):\n",
     "    dicts = data[categorical + numeric].to_dict(orient='records')\n",
     "\n",
     "    dv = DictVectorizer(sparse=sparse)\n",
@@ -4103,7 +4120,7 @@
     "    dicts = data[categorical + numeric].to_dict(orient='records')\n",
     "\n",
     "    X = dv.transform(dicts)\n",
-    "    y_pred = model.predict_proba(X)[:, 1]\n",
+    "    y_pred = model.predict_proba(X)\n",
     "\n",
     "    return y_pred"
    ]
@@ -4117,12 +4134,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr = LogisticRegression(multi_class=)"
+    "# we set the multiclass = 'ovr'\n",
+    "lr = LogisticRegression(multi_class='ovr',solver='lbfgs', C=1.0,max_iter=1000,random_state=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[9.56767022e-04, 2.88238409e-01, 7.10804824e-01],\n",
+       "       [5.73389364e-06, 6.02313782e-12, 9.99994266e-01],\n",
+       "       [4.33261131e-03, 1.96935211e-13, 9.95667389e-01],\n",
+       "       ...,\n",
+       "       [1.60914924e-01, 3.81402416e-01, 4.57682660e-01],\n",
+       "       [7.86865452e-01, 6.02253868e-15, 2.13134548e-01],\n",
+       "       [3.08835582e-01, 1.43738785e-01, 5.47425633e-01]])"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dv, model = train(df_train,y_train, True, lr)\n",
+    "y_pred = predict(df_val, dv, model)\n",
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9408760316644345"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the Roc_AUC_Score of the model\n",
+    "# check max_fpr at None and 1.0\n",
+    "roc_auc_score(y_val, y_pred, average='weighted',sample_weight=None, max_fpr=None, multi_class='ovr',labels=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
