--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "(7043, 38)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1041,7 @@
        "total_revenue                       4801.145000  11979.340000  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
        "Name: customer_status, dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1790,7 +1790,7 @@
        "total_revenue                                         0.778559       1.000000  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1803,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1853,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1865,7 +1865,7 @@
        "Name: customer_status, dtype: float64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1897,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1906,7 +1906,7 @@
        "(5634, 1409, 5634, 4225, 1409)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1921,7 +1921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1933,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1945,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1955,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1975,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1985,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1994,7 +1994,7 @@
        "0.266"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2006,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2016,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2045,7 +2045,7 @@
        " 'churn_reason']"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -4027,7 +4027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4037,7 +4037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -4067,7 +4067,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4100,7 +4100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -4124,7 +4124,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4145,7 +4145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4212,7 +4212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4246,7 +4246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4256,7 +4256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -4265,7 +4265,7 @@
        "array([2., 2., 2., ..., 2., 0., 2.])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4294,7 +4294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -4331,7 +4331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -4373,7 +4373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -4419,7 +4419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -4474,7 +4474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4483,7 +4483,7 @@
        "array([2., 2., 2., ..., 0., 2., 2.])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4503,7 +4503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -4522,7 +4522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -4561,7 +4561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4577,7 +4577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -4602,7 +4602,7 @@
        "       2., 2., 2., 0., 2., 0., 2., 0., 2.])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4615,7 +4615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -4635,7 +4635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -4668,7 +4668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4688,16 +4688,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1f1bfd0f730>]"
+       "[<matplotlib.lines.Line2D at 0x1a963f81db0>]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4719,7 +4719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -4799,7 +4799,7 @@
        "5         30       1.000000  1.000000"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4817,7 +4817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4837,7 +4837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4846,7 +4846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -4925,7 +4925,7 @@
        "1            10   0.999899            1.0       NaN"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4944,7 +4944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4969,7 +4969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -5054,7 +5054,7 @@
        "74                 1          30.0       15.0       0.999683  0.992815"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5076,7 +5076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5091,7 +5091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -5109,7 +5109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -5133,20 +5133,6 @@
     "##### When comparing the two models we see that RandomForrestClassifier performs better\n",
     "##### RandomForestClassifier is the better model"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
