--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,177 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'customer_id': '9967-ATRFS',\n",
-       " 'gender': 'Female',\n",
-       " 'age': 47,\n",
-       " 'married': 'No',\n",
-       " 'number_of_dependents': 0,\n",
-       " 'city': 'Calipatria',\n",
-       " 'zip_code': 92233,\n",
-       " 'latitude': 33.143826,\n",
-       " 'longitude': -115.497485,\n",
-       " 'number_of_referrals': 0,\n",
-       " 'tenure_in_months': 19,\n",
-       " 'offer': 'None',\n",
-       " 'phone_service': 'Yes',\n",
-       " 'avg_monthly_long_distance_charges': 32.03,\n",
-       " 'multiple_lines': 'No',\n",
-       " 'internet_service': 'No',\n",
-       " 'internet_type': 'Fiber Optic',\n",
-       " 'avg_monthly_gb_download': 26.189958310676094,\n",
-       " 'online_security': 'No',\n",
-       " 'online_backup': 'No',\n",
-       " 'device_protection_plan': 'No',\n",
-       " 'premium_tech_support': 'No',\n",
-       " 'streaming_tv': 'No',\n",
-       " 'streaming_movies': 'No',\n",
-       " 'streaming_music': 'No',\n",
-       " 'unlimited_data': 'Yes',\n",
-       " 'contract': 'Month-to-Month',\n",
-       " 'paperless_billing': 'No',\n",
-       " 'payment_method': 'Credit Card',\n",
-       " 'monthly_charge': 19.9,\n",
-       " 'total_charges': 367.55,\n",
-       " 'total_refunds': 0.0,\n",
-       " 'total_extra_data_charges': 0,\n",
-       " 'total_long_distance_charges': 608.57,\n",
-       " 'total_revenue': 976.12,\n",
-       " 'churn_category': 'Competitor',\n",
-       " 'churn_reason': 'Competitor had better devices'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "customer1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'customer_id': '2362-IBOOY',\n",
-       " 'gender': 'Male',\n",
-       " 'age': 22,\n",
-       " 'married': 'No',\n",
-       " 'number_of_dependents': 0,\n",
-       " 'city': 'San Diego',\n",
-       " 'zip_code': 92126,\n",
-       " 'latitude': 32.886925,\n",
-       " 'longitude': -117.152162,\n",
-       " 'number_of_referrals': 0,\n",
-       " 'tenure_in_months': 36,\n",
-       " 'offer': 'Offer C',\n",
-       " 'phone_service': 'Yes',\n",
-       " 'avg_monthly_long_distance_charges': 43.97,\n",
-       " 'multiple_lines': 'Yes',\n",
-       " 'internet_service': 'Yes',\n",
-       " 'internet_type': 'Fiber Optic',\n",
-       " 'avg_monthly_gb_download': 42.0,\n",
-       " 'online_security': 'No',\n",
-       " 'online_backup': 'No',\n",
-       " 'device_protection_plan': 'No',\n",
-       " 'premium_tech_support': 'No',\n",
-       " 'streaming_tv': 'No',\n",
-       " 'streaming_movies': 'Yes',\n",
-       " 'streaming_music': 'Yes',\n",
-       " 'unlimited_data': 'Yes',\n",
-       " 'contract': 'Month-to-Month',\n",
-       " 'paperless_billing': 'Yes',\n",
-       " 'payment_method': 'Bank Withdrawal',\n",
-       " 'monthly_charge': 84.75,\n",
-       " 'total_charges': 3050.15,\n",
-       " 'total_refunds': 0.0,\n",
-       " 'total_extra_data_charges': 0,\n",
-       " 'total_long_distance_charges': 1582.92,\n",
-       " 'total_revenue': 4633.07,\n",
-       " 'customer_status': 0.0,\n",
-       " 'churn_category': 'Competitor',\n",
-       " 'churn_reason': 'Competitor made better offer'}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "customer2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'customer_id': '7302-ZHMHP',\n",
-       " 'gender': 'Female',\n",
-       " 'age': 35,\n",
-       " 'married': 'No',\n",
-       " 'number_of_dependents': 0,\n",
-       " 'city': 'Coronado',\n",
-       " 'zip_code': 92118,\n",
-       " 'latitude': 32.68674,\n",
-       " 'longitude': -117.186612,\n",
-       " 'number_of_referrals': 0,\n",
-       " 'tenure_in_months': 1,\n",
-       " 'offer': 'None',\n",
-       " 'phone_service': 'Yes',\n",
-       " 'avg_monthly_long_distance_charges': 22.37,\n",
-       " 'multiple_lines': 'No',\n",
-       " 'internet_service': 'No',\n",
-       " 'internet_type': 'Fiber Optic',\n",
-       " 'avg_monthly_gb_download': 26.189958310676094,\n",
-       " 'online_security': 'No',\n",
-       " 'online_backup': 'No',\n",
-       " 'device_protection_plan': 'No',\n",
-       " 'premium_tech_support': 'No',\n",
-       " 'streaming_tv': 'No',\n",
-       " 'streaming_movies': 'No',\n",
-       " 'streaming_music': 'No',\n",
-       " 'unlimited_data': 'Yes',\n",
-       " 'contract': 'Month-to-Month',\n",
-       " 'paperless_billing': 'No',\n",
-       " 'payment_method': 'Credit Card',\n",
-       " 'monthly_charge': 19.15,\n",
-       " 'total_charges': 19.15,\n",
-       " 'total_refunds': 0.0,\n",
-       " 'total_extra_data_charges': 0,\n",
-       " 'total_long_distance_charges': 22.37,\n",
-       " 'total_revenue': 41.52,\n",
-       " 'customer_status': 1.0,\n",
-       " 'churn_category': 'Competitor',\n",
-       " 'churn_reason': 'Competitor had better devices'}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "customer3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -231,16 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Churn label': 0.0, 'Customer Status': True}"
+       "{'Churn label': 0.0, 'Customer Churn Status': True}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,16 +82,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Churn label': 0.0741279669762642, 'Customer Status': False}"
+       "{'Churn label': 0.0741279669762642, 'Customer Churn Status': False}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
