--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -5109,19 +5109,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 Score: 0.9897142317925653\n"
+      "F1 Score: 0.9900638750887154\n"
      ]
     }
    ],
    "source": [
-    "f1 = f1_score(y_test, y_pred, average='weighted')   \n",
+    "f1 = f1_score(y_test, y_pred, average='micro')   \n",
     "print(\"F1 Score:\", f1)"
    ]
   },
