--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Churn label': 0.004215686274509804, 'Customer Churn Status': False}\n"
+      "{'Churn label': 0.001024590163934426, 'Customer Churn Status': True, 'Customer status': 'Customer Churned'}\n"
      ]
     }
    ],
@@ -61,16 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Churn label': 0.0, 'Customer Churn Status': True}"
+       "{'Churn label': 0.006307130711591927,\n",
+       " 'Customer Churn Status': True,\n",
+       " 'Customer status': 'Customer Churned'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,16 +84,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Churn label': 0.0741279669762642, 'Customer Churn Status': False}"
+       "{'Churn label': 0.5762439561327127,\n",
+       " 'Customer Churn Status': False,\n",
+       " 'Customer status': 'Customer Joined'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
